--- a/index.html
+++ b/index.html
@@ -24,40 +24,42 @@
             <li><a href="#contatos">Contato</a></li>
         </ul>
     </nav>
-    <section class="gradient"> 
+    <article class="gradient"> 
         <div class="conteudo">
 
-            <div id="sobre">
+            <section id="sobre">
                 <h2>Sobre</h2>
                 <img id="photo" src="/fotoLuan.jpg" alt="Foto do Luan">
                 <h1 class="name"><a href="#sobre">Luan da Silva Ramalho</a></h1>
                 <p>Estudante de Desenvolvimento Web</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.</p>
-            </div>
+            </section>
 
-            <div id="skills">
+            <section id="skills">
                 <h2>Skills</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officLorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.ia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.</p>
-            </div>
+            </section>
 
-            <div id="formAcad">
+            <section id="formAcad">
                 <h2>Formação Acadêmica</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, errorLorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium. totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.</p>
-            </div>
+            </section>
 
-            <div id="experience">
+            <section id="experience">
                 <h2>Experiências Profissionais</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicingLorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium. elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.</p>
-            </div>
+            </section>
 
-            <div id="contatos">
+            <section id="contatos">
                 <h2>Contatos</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.</p>
-            </div>
+            </section>
 
-        </div>
+        </section>
 
-    </section>
-    
+    </article>
+    <footer>
+        
+    </footer>
 </body>
 </html>
