Modificado caminho das imagens

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300&display=swap" rel="stylesheet">
-    <link rel="icon" type="imagem/png" href="/LogoMakr-3WJwEi-removebg-preview.png" />
+    <link rel="icon" type="imagem/png" href="LogoMakr-3WJwEi-removebg-preview.png" />
 </head>
 <body >
     <header class="cabecalho"> 
-        <img class="logo" src="/LogoMakr-6xQ1Ct-removebg-preview.png" alt="">
+        <img class="logo" src="LogoMakr-6xQ1Ct-removebg-preview.png" alt="">
         
     </header>
     <nav class="menu">
@@ -29,7 +29,7 @@
 
             <section id="sobre">
                 <h2>Sobre</h2>
-                <img id="photo" src="/fotoLuan.jpg" alt="Foto do Luan">
+                <img id="photo" src="fotoLuan.jpg" alt="Foto do Luan">
                 <h1 class="name"><a href="#sobre">Luan da Silva Ramalho</a></h1>
                 <p>Estudante de Desenvolvimento Web</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.quis accusantium.Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis blanditiis, error totam et laboriosam dolores officia. Maiores expedita voluptate consectetur officiis illo earum laborum quos, voluptates magnam quis accusantium.</p>
